--- a/qtdesigner uis/viewtoolbarMK1.ui
+++ b/qtdesigner uis/viewtoolbarMK1.ui
@@ -153,6 +153,7 @@
     <addaction name="actionOpen"/>
     <addaction name="actionSave_as"/>
     <addaction name="actionClose"/>
+    <addaction name="actionExport_2"/>
    </widget>
    <widget class="QMenu" name="menuImage">
     <property name="title">
@@ -220,6 +221,11 @@
   <action name="actionHyperStacks">
    <property name="text">
     <string>HyperStacks</string>
+   </property>
+  </action>
+  <action name="actionExport_2">
+   <property name="text">
+    <string>Export...</string>
    </property>
   </action>
  </widget>
